# cloak-sdk

./: LICENSE  README.md
circuits/: Nargo.toml
circuits/scripts/: build.sh
circuits/spend/: Nargo.toml  Prover.toml
circuits/spend/src/: main.nr
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: CloakPool.sol  CloakProxy.sol  Poseidon2MerkleTree.sol
contracts/src/interfaces/: IVerifier.sol
contracts/src/verifiers/: HonkVerifier.sol
contracts/test/: CloakPool.t.sol  HonkVerifier.t.sol  Poseidon2Compat.t.sol
contracts/test/mocks/: Mocks.sol
relayer/: .env.example  Cargo.toml  Dockerfile  README.md  render.yaml
relayer/src/: config.rs  contract.rs  handlers.rs  main.rs
sdk/: .cloak-notes.baseSepolia.json  .gitignore  .npmignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/examples/: deposit-and-withdraw.mjs
sdk/scripts/: gen-onchain-fixture.mjs  live-smoke.mjs
sdk/src/: abi.ts  client.ts  constants.ts  deployments.ts  index.ts  intent.ts  note.ts  poseidon.ts  prover.ts  store.ts  tree.ts
sdk/src/circuit/: cloak_spend.json
sdk/src/react/: index.tsx
sdk/test/: poseidon.test.ts  prove.test.ts
