[package]
name = "cloak-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "2.1.0", features = ["full"] }
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
